--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
-html {
-  min-height: 100%
+html, body {
+  height: 100%;
+  min-height: 100%;
 }
 
 body {
   background-color: #F2F2F2;
-  min-height: 100%;
   font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.04em;
+}
+
+button {
+  background-color: #3F3244;
+  color: #F2F2F2;
+  font-weight: 300;
+  font-size: 1.2em;
+  height: 6%;
+  letter-spacing: 0.04em;
+  width: 33%;
 }
 
 header {
@@ -13,14 +24,51 @@ header {
   background-color: #2F2235;
   color: #F2F2F2;
   display: flex;
-  height: 50px;
+  height: 6%;
   justify-content: space-between;
 }
 
 header h1 {
-  margin-left: 50px;
+  margin-left: 3%;
+  font-size: 1.4em;
+  font-weight: 300;
+  letter-spacing: 0.1em;
 }
 
 header h3 {
-  margin-right: 50px;
+  margin-right: 3%;
+}
+
+.header-span {
+  color: #34D1D1;
+}
+
+.main {
+  height: 100%;
+  margin: 3% 3%;
+}
+
+.accordion {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.accordion-tabs-title {
+  display: flex;
+}
+
+.accordion-tabs-title hr {
+  width: 90%;
+  margin-left: 2%;
+}
+
+.accordion-tabs {
+  background-color: darkolivegreen;
+  margin: 3% 3%;
+  height: 66%;
+}
+
+.accordion button {
+  align-self: center;
 }
