--- a/styles.css
+++ b/styles.css
@@ -85,15 +85,21 @@ header h3 {
 	font-weight: 600;
 }
 
-
 .tab-content {
   display: none;
   height: 88%;
   border: 1px solid #666666;
 }
 
+.sqaure-placeholder {
+  background-color: #666666;
+  height: 87%;
+  margin: 2%;
+  width: 188%;
+}
+
 .show {
-  display: block;
+  display: flex;
 }
 
 .a-wrapper {
@@ -120,4 +126,23 @@ header h3 {
 
 #first-tab {
   margin: 0;
+}
+
+.tab-text {
+  margin: 4% 2% 2% 0;
+}
+
+.tab-text h2 {
+  font-size: 1.8em;
+  font-weight: 600;
+  margin-bottom: 2.5%;
+}
+
+.tab-text hr {
+  margin-bottom: 5%;
+}
+
+.tab-text p {
+  line-height: 1.5em;
+  margin: 4% 2.5% 0 0;
 }
