--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 html, body {
-  height: 100%;
   min-height: 100%;
 }
 
@@ -24,7 +23,7 @@ header {
   background-color: #2F2235;
   color: #F2F2F2;
   display: flex;
-  height: 6%;
+  height: 66px;
   justify-content: space-between;
 }
 
@@ -44,7 +43,7 @@ header h3 {
 }
 
 .main {
-  height: 100%;
+  min-height: 100%;
   margin: 3% 3%;
 }
 
