--- a/styles/accordion.css
+++ b/styles/accordion.css
@@ -5,7 +5,6 @@
 }
 
 .accordion-tabs {
-  background-color: #F2F2F2;
   margin: 3% 3%;
   height: 63%;
 }
@@ -15,10 +14,6 @@
   display: flex;
 }
 
-.accordion button {
-  align-self: center;
-}
-
 .active {
 	font-weight: 600;
 }
@@ -26,11 +21,11 @@
 .tab-content {
   display: none;
   height: 88%;
-  border: 1px solid #666666;
+  border: 2px solid #D1D2D3;
 }
 
 .square-placeholder {
-  background-color: #666666;
+  background-color: #f2f2f2;
   height: 87%;
   margin: 2%;
   width: 30%;
@@ -42,17 +37,17 @@
 
 .a-wrapper {
   align-items: center;
-  background-color: #D1D2D3;
+  background-color: #F2F2F2;
   display: flex;
   height: 100%;
   justify-content: center;
   width: 25%;
-  border-right: 1px solid #F2F2F2;
+  border-right: 1px solid #fff;
 }
 
 .selected-div {
-  background-color: #F2F2F2;
-  border: 1px solid #666666;
+  background-color: #fff;
+  border: 2px solid #D1D2D3;
   border-bottom: none;
   margin-left: -1px;
 }
