--- a/styles/flex-cards.css
+++ b/styles/flex-cards.css
@@ -5,14 +5,27 @@
   width: 90%;
 }
 
+.flex-cards button {
+  margin: 3% 0 6% 39%;
+  width: 25%;
+}
+
 .card-image {
-  background-color: #666666;
+  background-color: #f2f2f2;
+  height: 80%;
+  width: 100%
 }
 
 .short-card, .long-card {
   height: 333px;
-  border: 1px solid #666666;
+  border: 2px solid #D1D2D3;
   margin: 10px;
+}
+
+.short-card h2, .long-card h2 {
+  margin: 20px;
+  font-size: 1.6em;
+  font-weight: 600;
 }
 
 .short-card {
