--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,15 @@
+.header-bar {
+  display: flex;
+  flex-direction: column;
+}
+
 .nav-bar {
   align-items: center;
+  align-self: center;
   background-color: #D1D2D3;
   display: flex;
   margin: 60px;
-  justify-content: space-around;
+  justify-content: center;
   height: 120px;
   width: 87%;
 }
@@ -18,8 +24,10 @@
 
 .input-box {
   align-items: center;
-  display: flex;
+  align-self: center;
   border: 1px solid #9f9f9f;
+  display: flex;
+  height: 50px;
   background-color: #f2f2f2;
   justify-content: center;
 }
@@ -41,4 +49,75 @@
   color: #666;
   font-size: 1.3em;
   text-decoration: none;
+  margin: 60px;
+}
+
+.menu-btn {
+  display: none;
+}
+
+.nav-a {
+  display: flex;
+}
+
+@media (max-width: 1530px) {
+  .nav-bar a { 
+    margin: 40px;
+  }
+}
+
+@media (max-width: 1365px) {
+  .nav-bar a { 
+    margin: 20px;
+  }
+}
+
+@media (max-width: 1215px) {
+
+  .nav-a {
+    display: none;
+    background-color: #e6e6e6;
+    order: 1;
+    height: 490px;
+  }
+
+  .menu-btn {
+    display: contents;
+  }
+
+  .nav-bar {
+    justify-content: space-evenly;
+  }
+
+  .nav-bar a {
+    font-size: 2.3em;
+  }
+
+  .input-box {
+    width: 90%;
+    margin-top: 60px;
+    height: 60px;
+  }
+
+  .mobile-menu {
+    flex-direction: column;
+    height: 600px;
+  }
+
+  .mobile-nav{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 415px) {
+  .nav-bar a {
+    font-size: 1.6em;
+  }
+  .input-box input {
+    width: 175px;
+  }
 }
