--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,8 @@
 html, body {
   min-height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 body {
@@ -58,4 +61,32 @@ header h3 {
   background-color: #D1D2D3;
   margin-left: 3%;
   width: 87%;
+}
+
+@media (max-width: 1215px) {
+
+  .main {
+    margin: 3% 4%;
+  }
+
+  button {
+    width: 100%;
+    height: 90px;
+  }
+
+  .tabs-title {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .tabs-title h4 {
+    font-size: 2em;
+    margin-bottom: 10px;
+  }
+
+  .tabs-title hr {
+    margin: 0;
+    width: 21%;
+  }
+
 }
