--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,25 @@ header h3 {
 
 @media (max-width: 1215px) {
 
+  header {
+    align-items: center;
+    flex-direction: column;
+    height: 200px;
+    justify-content: space-evenly;
+  }
+
+  header h1, header h3 {
+    margin: 0;
+  } 
+
+  header h1 {
+    font-size: 4em;
+  }
+
+  header h3 {
+    font-size: 2em;
+  }
+
   .main {
     margin: 3% 4%;
   }
@@ -88,5 +107,24 @@ header h3 {
     margin: 0;
     width: 21%;
   }
+}
 
+@media (max-width: 600px) {
+  header h1 {
+    font-size: 3em;
+  }
+
+  header h3 {
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 420px) {
+  header h1 {
+    font-size: 2.2em;
+  }
+
+  header h3 {
+    font-size: 1.5em;
+  }
 }
