adjust margin at < 1215 media query

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,12 +85,13 @@ header h3 {
   }
 
   .main {
-    margin: 3% 4%;
+    margin: 3% 3%;
   }
 
   button {
     width: 100%;
     height: 90px;
+    margin-bottom: 60px;
   }
 
   .tabs-title {
